--- a/.github/workflows/css.yml
+++ b/.github/workflows/css.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - master
 
 jobs:
   build:
@@ -27,7 +26,7 @@ jobs:
         run: pnpm install
 
       - name: Build CSS
-        run: pnpm run build:scss
+        run: pnpm run build
 
       - name: Copy assets
         run: cp -r ./asset ./dist
