--- a/.github/workflows/css.yml
+++ b/.github/workflows/css.yml
@@ -29,7 +29,7 @@ jobs:
         run: pnpm run build
 
       - name: Copy assets
-        run: cp -r ./asset ./dist && cp ./README.md ./dist
+        run: cp -r ./{asset,README.md,_config.yml} ./dist
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
