--- a/.github/workflows/css.yml
+++ b/.github/workflows/css.yml
@@ -37,3 +37,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: deploy
           publish_dir: "./dist"
+          enable_jekyll: true
